Bug 93857 - opengl glyph caching misplaces writer text
Summary: opengl glyph caching misplaces writer text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-02 13:27 UTC by Miklos Vajna
Modified: 2016-10-25 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
How it looks like currently (118.84 KB, image/png)
2015-09-02 13:27 UTC, Miklos Vajna
Details
GL without glyph caching, good. (116.18 KB, image/png)
2015-09-02 13:28 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-09-02 13:27:18 UTC
Created attachment 118347 [details]
How it looks like currently

If LO is started on Windows with:

SAL_FORCEGL=1 instdir/program/soffice.bin

Then text in Writer is misplaced a bit. Given that the cursor caret still has the correct position, this is quite visible.
Comment 1 Miklos Vajna 2015-09-02 13:28:15 UTC
Created attachment 118348 [details]
GL without glyph caching, good.

Typing "x" 10 times then selecting the last character should look like this.
Comment 2 Commit Notification 2015-09-02 13:43:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=53a40c43a1ac88e761e97a2832367525ee6b0426

tdf#93857 opengl: adapt UniscribeLayout's DrawCachedGlyphs() to FillDXArray()

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-09-02 14:48:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=448680d16585f454e609acfd09437b2607566714&h=libreoffice-5-0

tdf#93857 opengl: adapt UniscribeLayout's DrawCachedGlyphs() to FillDXArray()

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.