tdf#93857 opengl: adapt UniscribeLayout's DrawCachedGlyphs() to FillDXArray()

The problem was UniscribeLayout::DrawCachedGlyphs() counted the total
advance value unconditionally from mpGlyphAdvances, while
UniscribeLayout::FillDXArray() (which provides advance values to e.g.
Writer) only used mpGlyphAdvances in case of NULL mpJustifications.  Fix
this by first checking mpJustifications in
UniscribeLayout::DrawCachedGlyphs(), too.

With this, e.g. typing "x" in Writer 10 times will not result in a
"misplaced" cursor caret.

Change-Id: I16c7a258ff77b25c5121b9b974e72ad6efe5e9fc
(cherry picked from commit 53a40c43a1ac88e761e97a2832367525ee6b0426)
Reviewed-on: https://gerrit.libreoffice.org/18268
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>